After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747410 - regression: default zoom incorrect when browsing
regression: default zoom incorrect when browsing
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: image viewer
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-06 13:45 UTC by Emmanuel Pacaud
Modified: 2015-04-10 19:48 UTC
See Also:
GNOME target: ---
GNOME version: 3.15/3.16


Attachments
Tes files (1.07 KB, application/x-gzip)
2015-04-06 13:45 UTC, Emmanuel Pacaud
Details

Description Emmanuel Pacaud 2015-04-06 13:45:51 UTC
Created attachment 301020 [details]
Tes files

How to reproduce:

- Decompress the attached file
- Open one of the files
- Browse the other using either the keyboard left/right or the overlayed controls
- Zoom for red image is incorrect, the image is not completely visible. It used to work before.
Comment 1 Felix Riemann 2015-04-06 18:53:55 UTC
On a quick look it looks like some sort of "feedback loop" from the zoom scale in the headerbar. Due to some usability problems with it it's range goes from 30% to 300% while the viewing widget supports a range of 2% to 2000%.

Though, I wonder why it doesn't occur on all images requiring a best fit zoom below 30%.
Comment 2 Felix Riemann 2015-04-10 19:48:51 UTC
Fixed this for now by blocking the signal handler on the zoom scale if the scroll view decided on the zoom factor itself.

A pretty fix depends on how the zoom scale develops in the near future.

commit e52a64c4180c2245d1c484aa1b88fa2d5c9803b8
Author: Felix Riemann <>
Date:   Fri Apr 10 21:44:28 2015 +0200

    EogWindow: Fix feedback loop from zoom scale to scroll view
    
    Block signal handler to avoid setting the zoom again when the
    scroll view sets the zoom on its own. Although the scroll view
    will usually ignore these resets it won't do so if the zoom scale
    clamps the zoom factor to its own allowed range.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=747410
---
This problem has been fixed in our software repository. The fix will go into the next software release. Once that release is available, you may want to check for a software upgrade provided by your Linux distribution.