EogWindow: Fix feedback loop from zoom scale to scroll view

Block signal handler to avoid setting the zoom again when the
scroll view sets the zoom on its own. Although the scroll view
will usually ignore these resets it won't do so if the zoom scale
clamps the zoom factor to its own allowed range.

https://bugzilla.gnome.org/show_bug.cgi?id=747410